white spaces fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -124,19 +124,24 @@ th {
 */
 
 footer.site-footer {
-  padding-bottom: 100px; 
+  //padding-bottom: 100px; 
   margin-top: 100px;
   font-size: 28px;
   color: white;
+  position: relative;
+  overflow: hidden;
 
   .nav-container {
     max-width: 1685px;
     margin: auto;
+    @media only screen and (min-width: 1400px) {
+      padding-top: 300px;
+    }
   }
 
   a:hover {color: white;}
   a {
-    font-size: 22px;
+    font-size: 20px;
     padding-top: 20px;
     color: white;
     @include media-breakpoint-down(sm){
@@ -147,7 +152,7 @@ footer.site-footer {
 
   h5 {
     display: inline;
-    font-size: 28px;
+    font-size: 25px;
     font-weight: bold;
     border-bottom: 5px solid #B0D35C;
     text-transform: uppercase;
@@ -180,5 +185,8 @@ footer.site-footer {
   }
 
   background: transparent linear-gradient(263deg, #B0D35C 0%, #4AAB4F 51%, #4AAB4F 100%) 0% 0% no-repeat padding-box;
+  @media only screen and (min-width: 1400px) {
+    background: none;
+  }
   opacity: 1;
 }
